@@ -39,11 +39,38 @@ if (isset($bannerid) && isset($clientid) && isset($zoneid))
 {
 	if (!isset($source)) $source = '';
 	
-	phpAds_dbConnect();
-	phpAds_logImpression ($bannerid, $clientid, $zoneid, $source);
+	if ($phpAds_config['block_adviews'] == 0 ||
+	   ($phpAds_config['block_adviews'] > 0 && !isset($phpAds_blockView[$bannerid])))
+	{
+		phpAds_dbConnect();
+		phpAds_logImpression ($bannerid, $clientid, $zoneid, $source);
+		
+		
+		// Send block cookies
+		if ($phpAds_config['block_adviews'] > 0)
+		{
+			if ($phpAds_config['p3p_policies'])
+			{
+				$p3p_header = '';
+				
+				if ($phpAds_config['p3p_policy_location'] != '')
+					$p3p_header .= " policyref=\"".$phpAds_config['p3p_policy_location']."\"";
+				
+				if ($phpAds_config['p3p_compact_policy'] != '')
+					$p3p_header .= " CP=\"".$phpAds_config['p3p_compact_policy']."\"";
+				
+				if ($p3p_header != '')
+					header ("P3P: $p3p_header");
+			}
+			
+			$url = parse_url($phpAds_config['url_prefix']);
+			SetCookie("phpAds_blockView[".$bannerid."]", time(), time() + $phpAds_config['block_adviews'], $url["path"]);
+		}
+	}
 }
 
-header ("Content-type: image/gif");
+
+header 	 ("Content-type: image/gif");
 
 // 1 x 1 gif
 echo chr(0x47).chr(0x49).chr(0x46).chr(0x38).chr(0x37).chr(0x61).chr(0x01).chr(0x00).
